<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.Holo.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="0dp"

    android:paddingEnd="0dp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/MaRéu.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView_add_reunion">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_reunion"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/MaRéu.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView_add_reunion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subject_add_reunion_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/subject_add_reunion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_double"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginEnd="@dimen/margin_double"
                    android:ems="10"
                    android:hint="@string/add_reunion_edit_subject"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textSize="@dimen/text"
                    style="@android:style/Widget.Material.EditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/add_reunion_edit_subject"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/select_start_date_add_reunion"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_double"
                android:calendarViewShown="false"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="@dimen/margin_normal"
                android:text="@string/date_add_reunion_text"
                android:textSize="@dimen/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject_add_reunion_text_input_layout" />

            <TextView
                android:id="@+id/select_start_time_add_reunion"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_double"
                android:calendarViewShown="false"
                android:drawableStart="@drawable/ic_access_time_black_24dp"
                android:drawablePadding="@dimen/margin_normal"
                android:text="@string/time_add_reunion_text"
                android:textSize="@dimen/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_start_date_add_reunion" />

            <TextView
                android:id="@+id/duration_add_reunion_text"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_double"
                android:text="@string/duration_add_reunion_text"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_start_time_add_reunion" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <NumberPicker
                android:id="@+id/duration_hours_add_reunion"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/picker"
                android:inputType="datetime"
                android:timePickerMode="spinner"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/duration_add_reunion_text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_half"
                android:layout_marginTop="40dp"
                android:text="H"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@+id/duration_hours_add_reunion"
                app:layout_constraintTop_toBottomOf="@+id/duration_add_reunion_text" />

            <NumberPicker
                android:id="@+id/duration_minutes_add_reunion"

                android:layout_width="0dp"
                android:layout_height="@dimen/picker"
                android:layout_marginEnd="@dimen/large_margin"
                android:inputType="datetime"
                android:timePickerMode="spinner"
                android:layout_marginStart="@dimen/margin_normal"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/duration_add_reunion_text" />

            <!--
                <TextView
                    android:id="@+id/room_add_reunion_text"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/room_add_reunion_text"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/duration_minutes_add_reunion" />
    -->

            <Spinner
                android:id="@+id/room_add_reunion"
                style="@android:style/Widget.Holo.Light.DropDownItem.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_double"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duration_minutes_add_reunion"
                tools:text="@string/room_add_reunion_text" />

            <MultiAutoCompleteTextView
                android:id="@+id/guest_add_reunion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_double"
                android:layout_marginTop="@dimen/margin_double"
                android:layout_marginEnd="@dimen/margin_double"
                android:hint="@string/guest_list_text_view"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/room_add_reunion"
                tools:text="@string/guest_list_text_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>