<resources>
    <string name="app_name" translatable="false">Ma réu</string>
    <!--Filters texts-->
    <string name="menu_sort_date">Trier par date</string>
    <string name="menu_filter_date">Filtrer par date</string>
    <string name="menu_filter_room">Filtrer par salle de réunion</string>
    <string name="filter_reset_text">Réinitialiser le filtre</string>
    <string name="filter_rooms_text">Sélectionnez les salles de réunion à afficher</string>
    <string name="filter_ok_text">Voir</string>
    <!--List Meeting Layout-->
    <string name="text_first_line">Reunion TEST - Salle RDC</string>
    <string name="text_second_line">6 mai 2020 19:30</string>
    <string name="text_third_line">test@openclassrooms.com</string>
    <string name="toast_room_not_selected">Sélectionnez au moins une salle de réunion!</string>
    <!--Add Meeting Layout-->
    <string name="add_meeting_subject">Saisir un titre (30 max)</string>
    <string name="menu_creation_meeting">Créer la réunion</string>
    <string name="add_meeting_guests">Saisir les invités</string>
    <string name="add_meeting_datepicker">Saisir la date de la réunion</string>
    <string name="add_meeting_timepicker">Saisir l\'heure de début de la réunion</string>
    <string name="add_meeting_duration">Saisir la durée de la réunion</string>
    <string name="add_meeting_room">Sélectionner la salle de la réunion</string>
    <!--Add Meeting Layout - Creation action -->
    <string name="toast_duration_empty">Renseignez la durée de la réunion!</string>
    <string name="toast_subject_empty">Renseignez un titre à la réunion!</string>
    <string name="toast_room_empty">Sélectionnez la salle de réunion!</string>
    <string name="toast_guests_empty">Saisissez au moins un invité!</string>
    <string name="toast_room_unavailable">La salle choisie n\'est pas disponible</string>
    <!--Content Description-->
    <string name="splashscreen_content_description" translatable="false">SplashScreen</string>
    <string name="item_meeting_delete_description">Supprimer la réunion</string>
    <string name="room_image_list_meetings_content_description">"Image salle de réunion""</string>
</resources>
